--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "MIT",
   "packageManager": "pnpm@10.7.1",
   "devDependencies": {
+    "@code-guideline/eslint": "^0.0.5",
     "rimraf": "^6.0.1",
     "tsup": "^8.4.0"
   },
