--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@code-guideline/eslint",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Code Guideline for eslint",
   "main": "index.js",
   "scripts": {
@@ -38,8 +38,7 @@
     "eslint-plugin-unused-imports": "^4.1.4"
   },
   "peerDependencies": {
-    "eslint": "^9.31.0",
-    "@darraghor/eslint-plugin-nestjs-typed": "^6.7.0"
+    "eslint": "^9.31.0"
   },
   "files": [
     "dist"
